@@ -1,3 +1,8 @@
+2003-06-26  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* include/signal.h: Remove unused definitions that had been used
+	for embryonic POSIX signals support.
+
 2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/signals.cdl: Fix doc link.
